--- a/incubator/Frances/Rep-5-COMPASScovarAim2-scaleDiffLog.Rmd
+++ b/incubator/Frances/Rep-5-COMPASScovarAim2-scaleDiffLog.Rmd
@@ -155,6 +155,10 @@ The antibody variables of interest found from Melissa's project or deemed of int
 
 In this report, we run original COMPASS and COMPASS-covariate on the 20 patients using different ways of excluding flow gates.
 
+
+
+
+
 ```{r, options}
 
 #--- --- --- --- --- --- --- --- --- --- --- --- --- --- --- ---
@@ -223,6 +227,18 @@ aim3DF <- antibodyDF %>%
   inner_join(pp65_demoInfo_Aim3) %>%
   inner_join(pp65)
 ```
+
+
+We consider including the patients below, who don't stop prophy but who have flow at 2/3 months and antibody measurements at pre-transplant and 2/3 months. There are currently none; there are 19 patients with the flow data but no antibody data. TODO: ask Melissa if these are available.
+
+```{r toInclude-woProphyStop, fig.height=20}
+pp65 %>% inner_join(NewBoolInfo) %>% 
+  inner_join(Prophlax,by="SUBJID") %>% 
+  filter(is.na(PROPDUR)) %>% filter(Visit %in% c(1,2)) %>%
+# join with antibody
+  inner_join(antibodyDF)
+```
+
 
 ```{r funcs, options}
 #-------------------------------------------
@@ -1383,49 +1399,6 @@ pp65 %>% filter(TheID %in% c("CTOT22-39-195","CTOT22-39-189"),
 
 ```
 
-
-```{r outliers, fig.height=20}
-
-
-# median_pp65_prop <- pp65 %>%
-#   select(TheID, Visit, contains("Count")) %>%
-#   filter(Visit %in% c(1,2)) %>% 
-#   inner_join(pp65_demoInfo_Aim2) %>% 
-#   select(TheID, Visit, matches(".*(\\+|-).*(\\+|-).*(\\+|-).*(\\+|-).*(\\+|-).*")) %>%
-#   mutate(sumCounts = rowSums(across(contains("Count")))) %>%
-#   # proportion across all gates (because COMPASS includes the CD4 vs.CD8 gates)
-#     mutate(across(contains("Count"), ~ .x/sumCounts)) %>%
-#     select(-c(sumCounts)) %>%
-#     rename_with(~ gsub("Count", "Freq", .x)) %>%
-#   pivot_longer(-c(TheID,Visit), names_to = "Gates", values_to = "Freqs") %>%
-#   group_by(Gates) %>% summarise(med_freq=median(Freqs))
-# 
-# pp65 %>% 
-#   select(TheID, Visit, contains("Count")) %>%
-#   filter(Visit %in% c(1,2)) %>%
-#   filter(TheID %in% c("CTOT22-39-195", "CTOT22-39-189")) %>% inner_join(pp65_demoInfo_Aim2) %>% 
-#   select(TheID, Visit, matches(".*(\\+|-).*(\\+|-).*(\\+|-).*(\\+|-).*(\\+|-).*")) %>%
-#   mutate(sumCounts = rowSums(across(contains("Count")))) %>%
-#   # proportion across all gates (because COMPASS includes the CD4 vs.CD8 gates)
-#     mutate(across(contains("Count"), ~ .x/sumCounts)) %>%
-#     select(-c(sumCounts)) %>%
-#     rename_with(~ gsub("Count", "Freq", .x)) %>%
-#   pivot_longer(-c(TheID,Visit), names_to = "Gates", values_to = "Freqs") %>%
-# # join with median pp65
-#   left_join(median_pp65_prop) %>% 
-#   ggplot(aes(x=Freqs)) + geom_histogram() + 
-#   geom_vline(aes(xintercept=med_freq)) + 
-#   facet_wrap(.~Gates, scales="free",ncol=3)
-
-
-
-# flowDF_cut_CD4 %>%
-#     mutate(sumCounts = rowSums(across(contains("Count")))) %>%
-#   # proportion across all gates (because COMPASS includes the CD4 vs.CD8 gates)
-#     mutate(across(contains("Count"), ~ .x/sumCounts)) %>%
-#     select(-c(ID, sumCounts)) %>%
-#     rename_with(~ gsub("Count", "Freq", .x)) 
-```
 
 We see whether the difference originates from pp65 or noStim.
 
